tests/baselines/reference/logicalOrOperatorWithEveryType(strict=true).errors.txt
logicalOrOperatorWithEveryType.ts(18,11): error TS2454: Variable 'a2' is used before being assigned.
logicalOrOperatorWithEveryType.ts(19,11): error TS2454: Variable 'a3' is used before being assigned.
logicalOrOperatorWithEveryType.ts(20,11): error TS2454: Variable 'a4' is used before being assigned.
logicalOrOperatorWithEveryType.ts(21,11): error TS1345: An expression of type 'void' cannot be tested for truthiness.
logicalOrOperatorWithEveryType.ts(22,11): error TS2454: Variable 'a6' is used before being assigned.
logicalOrOperatorWithEveryType.ts(23,11): error TS2454: Variable 'a7' is used before being assigned.
logicalOrOperatorWithEveryType.ts(24,11): error TS2454: Variable 'a8' is used before being assigned.
logicalOrOperatorWithEveryType.ts(28,17): error TS2454: Variable 'a2' is used before being assigned.
logicalOrOperatorWithEveryType.ts(29,11): error TS2454: Variable 'a2' is used before being assigned.
logicalOrOperatorWithEveryType.ts(29,17): error TS2454: Variable 'a2' is used before being assigned.
logicalOrOperatorWithEveryType.ts(30,11): error TS2454: Variable 'a3' is used before being assigned.
logicalOrOperatorWithEveryType.ts(30,17): error TS2454: Variable 'a2' is used before being assigned.
logicalOrOperatorWithEveryType.ts(31,11): error TS2454: Variable 'a4' is used before being assigned.
logicalOrOperatorWithEveryType.ts(31,17): error TS2454: Variable 'a2' is used before being assigned.
logicalOrOperatorWithEveryType.ts(32,11): error TS1345: An expression of type 'void' cannot be tested for truthiness.
logicalOrOperatorWithEveryType.ts(32,17): error TS2454: Variable 'a2' is used before being assigned.
logicalOrOperatorWithEveryType.ts(33,11): error TS2454: Variable 'a6' is used before being assigned.
logicalOrOperatorWithEveryType.ts(33,17): error TS2454: Variable 'a2' is used before being assigned.
logicalOrOperatorWithEveryType.ts(34,11): error TS2454: Variable 'a7' is used before being assigned.
logicalOrOperatorWithEveryType.ts(34,17): error TS2454: Variable 'a2' is used before being assigned.
logicalOrOperatorWithEveryType.ts(35,11): error TS2454: Variable 'a8' is used before being assigned.
logicalOrOperatorWithEveryType.ts(35,17): error TS2454: Variable 'a2' is used before being assigned.
logicalOrOperatorWithEveryType.ts(36,19): error TS2454: Variable 'a2' is used before being assigned.
logicalOrOperatorWithEveryType.ts(37,24): error TS2454: Variable 'a2' is used before being assigned.
logicalOrOperatorWithEveryType.ts(39,17): error TS2454: Variable 'a3' is used before being assigned.
logicalOrOperatorWithEveryType.ts(40,11): error TS2454: Variable 'a2' is used before being assigned.
logicalOrOperatorWithEveryType.ts(40,17): error TS2454: Variable 'a3' is used before being assigned.
logicalOrOperatorWithEveryType.ts(41,11): error TS2454: Variable 'a3' is used before being assigned.
logicalOrOperatorWithEveryType.ts(41,17): error TS2454: Variable 'a3' is used before being assigned.
logicalOrOperatorWithEveryType.ts(42,11): error TS2454: Variable 'a4' is used before being assigned.
logicalOrOperatorWithEveryType.ts(42,17): error TS2454: Variable 'a3' is used before being assigned.
logicalOrOperatorWithEveryType.ts(43,11): error TS1345: An expression of type 'void' cannot be tested for truthiness.
logicalOrOperatorWithEveryType.ts(43,17): error TS2454: Variable 'a3' is used before being assigned.
logicalOrOperatorWithEveryType.ts(44,11): error TS2454: Variable 'a6' is used before being assigned.
logicalOrOperatorWithEveryType.ts(44,17): error TS2454: Variable 'a3' is used before being assigned.
logicalOrOperatorWithEveryType.ts(45,11): error TS2454: Variable 'a7' is used before being assigned.
logicalOrOperatorWithEveryType.ts(45,17): error TS2454: Variable 'a3' is used before being assigned.
logicalOrOperatorWithEveryType.ts(46,11): error TS2454: Variable 'a8' is used before being assigned.
logicalOrOperatorWithEveryType.ts(46,17): error TS2454: Variable 'a3' is used before being assigned.
logicalOrOperatorWithEveryType.ts(47,19): error TS2454: Variable 'a3' is used before being assigned.
logicalOrOperatorWithEveryType.ts(48,25): error TS2454: Variable 'a3' is used before being assigned.
logicalOrOperatorWithEveryType.ts(50,17): error TS2454: Variable 'a4' is used before being assigned.
logicalOrOperatorWithEveryType.ts(51,11): error TS2454: Variable 'a2' is used before being assigned.
logicalOrOperatorWithEveryType.ts(51,17): error TS2454: Variable 'a4' is used before being assigned.
logicalOrOperatorWithEveryType.ts(52,11): error TS2454: Variable 'a3' is used before being assigned.
logicalOrOperatorWithEveryType.ts(52,17): error TS2454: Variable 'a4' is used before being assigned.
logicalOrOperatorWithEveryType.ts(53,11): error TS2454: Variable 'a4' is used before being assigned.
logicalOrOperatorWithEveryType.ts(53,17): error TS2454: Variable 'a4' is used before being assigned.
logicalOrOperatorWithEveryType.ts(54,11): error TS1345: An expression of type 'void' cannot be tested for truthiness.
logicalOrOperatorWithEveryType.ts(54,17): error TS2454: Variable 'a4' is used before being assigned.
logicalOrOperatorWithEveryType.ts(55,11): error TS2454: Variable 'a6' is used before being assigned.
logicalOrOperatorWithEveryType.ts(55,17): error TS2454: Variable 'a4' is used before being assigned.
logicalOrOperatorWithEveryType.ts(56,11): error TS2454: Variable 'a7' is used before being assigned.
logicalOrOperatorWithEveryType.ts(56,17): error TS2454: Variable 'a4' is used before being assigned.
logicalOrOperatorWithEveryType.ts(57,11): error TS2454: Variable 'a8' is used before being assigned.
logicalOrOperatorWithEveryType.ts(57,17): error TS2454: Variable 'a4' is used before being assigned.
logicalOrOperatorWithEveryType.ts(58,19): error TS2454: Variable 'a4' is used before being assigned.
logicalOrOperatorWithEveryType.ts(59,25): error TS2454: Variable 'a4' is used before being assigned.
logicalOrOperatorWithEveryType.ts(62,11): error TS2454: Variable 'a2' is used before being assigned.
logicalOrOperatorWithEveryType.ts(63,11): error TS2454: Variable 'a3' is used before being assigned.
logicalOrOperatorWithEveryType.ts(64,11): error TS2454: Variable 'a4' is used before being assigned.
logicalOrOperatorWithEveryType.ts(65,11): error TS1345: An expression of type 'void' cannot be tested for truthiness.
logicalOrOperatorWithEveryType.ts(66,11): error TS2454: Variable 'a6' is used before being assigned.
logicalOrOperatorWithEveryType.ts(67,11): error TS2454: Variable 'a7' is used before being assigned.
logicalOrOperatorWithEveryType.ts(68,11): error TS2454: Variable 'a8' is used before being assigned.
logicalOrOperatorWithEveryType.ts(72,17): error TS2454: Variable 'a6' is used before being assigned.
logicalOrOperatorWithEveryType.ts(73,11): error TS2454: Variable 'a2' is used before being assigned.
logicalOrOperatorWithEveryType.ts(73,17): error TS2454: Variable 'a6' is used before being assigned.
logicalOrOperatorWithEveryType.ts(74,11): error TS2454: Variable 'a3' is used before being assigned.
logicalOrOperatorWithEveryType.ts(74,17): error TS2454: Variable 'a6' is used before being assigned.
logicalOrOperatorWithEveryType.ts(75,11): error TS2454: Variable 'a4' is used before being assigned.
logicalOrOperatorWithEveryType.ts(75,17): error TS2454: Variable 'a6' is used before being assigned.
logicalOrOperatorWithEveryType.ts(76,11): error TS1345: An expression of type 'void' cannot be tested for truthiness.
logicalOrOperatorWithEveryType.ts(76,17): error TS2454: Variable 'a6' is used before being assigned.
logicalOrOperatorWithEveryType.ts(77,11): error TS2454: Variable 'a6' is used before being assigned.
logicalOrOperatorWithEveryType.ts(77,17): error TS2454: Variable 'a6' is used before being assigned.
logicalOrOperatorWithEveryType.ts(78,11): error TS2454: Variable 'a7' is used before being assigned.
logicalOrOperatorWithEveryType.ts(78,17): error TS2454: Variable 'a6' is used before being assigned.
logicalOrOperatorWithEveryType.ts(79,11): error TS2454: Variable 'a8' is used before being assigned.
logicalOrOperatorWithEveryType.ts(79,17): error TS2454: Variable 'a6' is used before being assigned.
logicalOrOperatorWithEveryType.ts(80,19): error TS2454: Variable 'a6' is used before being assigned.
logicalOrOperatorWithEveryType.ts(81,25): error TS2454: Variable 'a6' is used before being assigned.
logicalOrOperatorWithEveryType.ts(83,17): error TS2454: Variable 'a7' is used before being assigned.
logicalOrOperatorWithEveryType.ts(84,11): error TS2454: Variable 'a2' is used before being assigned.
logicalOrOperatorWithEveryType.ts(84,17): error TS2454: Variable 'a7' is used before being assigned.
logicalOrOperatorWithEveryType.ts(85,11): error TS2454: Variable 'a3' is used before being assigned.
logicalOrOperatorWithEveryType.ts(85,17): error TS2454: Variable 'a7' is used before being assigned.
logicalOrOperatorWithEveryType.ts(86,11): error TS2454: Variable 'a4' is used before being assigned.
logicalOrOperatorWithEveryType.ts(86,17): error TS2454: Variable 'a7' is used before being assigned.
logicalOrOperatorWithEveryType.ts(87,11): error TS1345: An expression of type 'void' cannot be tested for truthiness.
logicalOrOperatorWithEveryType.ts(87,17): error TS2454: Variable 'a7' is used before being assigned.
logicalOrOperatorWithEveryType.ts(88,11): error TS2454: Variable 'a6' is used before being assigned.
logicalOrOperatorWithEveryType.ts(88,17): error TS2454: Variable 'a7' is used before being assigned.
logicalOrOperatorWithEveryType.ts(89,11): error TS2454: Variable 'a7' is used before being assigned.
logicalOrOperatorWithEveryType.ts(89,17): error TS2454: Variable 'a7' is used before being assigned.
logicalOrOperatorWithEveryType.ts(90,11): error TS2454: Variable 'a8' is used before being assigned.
logicalOrOperatorWithEveryType.ts(90,17): error TS2454: Variable 'a7' is used before being assigned.
logicalOrOperatorWithEveryType.ts(91,19): error TS2454: Variable 'a7' is used before being assigned.
logicalOrOperatorWithEveryType.ts(92,25): error TS2454: Variable 'a7' is used before being assigned.
logicalOrOperatorWithEveryType.ts(94,17): error TS2454: Variable 'a8' is used before being assigned.
logicalOrOperatorWithEveryType.ts(95,11): error TS2454: Variable 'a2' is used before being assigned.
logicalOrOperatorWithEveryType.ts(95,17): error TS2454: Variable 'a8' is used before being assigned.
logicalOrOperatorWithEveryType.ts(96,11): error TS2454: Variable 'a3' is used before being assigned.
logicalOrOperatorWithEveryType.ts(96,17): error TS2454: Variable 'a8' is used before being assigned.
logicalOrOperatorWithEveryType.ts(97,11): error TS2454: Variable 'a4' is used before being assigned.
logicalOrOperatorWithEveryType.ts(97,17): error TS2454: Variable 'a8' is used before being assigned.
logicalOrOperatorWithEveryType.ts(98,11): error TS1345: An expression of type 'void' cannot be tested for truthiness.
logicalOrOperatorWithEveryType.ts(98,17): error TS2454: Variable 'a8' is used before being assigned.
logicalOrOperatorWithEveryType.ts(99,11): error TS2454: Variable 'a6' is used before being assigned.
logicalOrOperatorWithEveryType.ts(99,17): error TS2454: Variable 'a8' is used before being assigned.
logicalOrOperatorWithEveryType.ts(100,11): error TS2454: Variable 'a7' is used before being assigned.
logicalOrOperatorWithEveryType.ts(100,17): error TS2454: Variable 'a8' is used before being assigned.
logicalOrOperatorWithEveryType.ts(101,11): error TS2454: Variable 'a8' is used before being assigned.
logicalOrOperatorWithEveryType.ts(101,17): error TS2454: Variable 'a8' is used before being assigned.
logicalOrOperatorWithEveryType.ts(102,19): error TS2454: Variable 'a8' is used before being assigned.
logicalOrOperatorWithEveryType.ts(103,25): error TS2454: Variable 'a8' is used before being assigned.
logicalOrOperatorWithEveryType.ts(106,11): error TS2454: Variable 'a2' is used before being assigned.
logicalOrOperatorWithEveryType.ts(107,11): error TS2454: Variable 'a3' is used before being assigned.
logicalOrOperatorWithEveryType.ts(108,11): error TS2454: Variable 'a4' is used before being assigned.
logicalOrOperatorWithEveryType.ts(109,11): error TS1345: An expression of type 'void' cannot be tested for truthiness.
logicalOrOperatorWithEveryType.ts(110,11): error TS2454: Variable 'a6' is used before being assigned.
logicalOrOperatorWithEveryType.ts(111,11): error TS2454: Variable 'a7' is used before being assigned.
logicalOrOperatorWithEveryType.ts(112,11): error TS2454: Variable 'a8' is used before being assigned.
logicalOrOperatorWithEveryType.ts(117,11): error TS2454: Variable 'a2' is used before being assigned.
logicalOrOperatorWithEveryType.ts(118,11): error TS2454: Variable 'a3' is used before being assigned.
logicalOrOperatorWithEveryType.ts(119,11): error TS2454: Variable 'a4' is used before being assigned.
logicalOrOperatorWithEveryType.ts(120,11): error TS1345: An expression of type 'void' cannot be tested for truthiness.
logicalOrOperatorWithEveryType.ts(121,11): error TS2454: Variable 'a6' is used before being assigned.
logicalOrOperatorWithEveryType.ts(122,11): error TS2454: Variable 'a7' is used before being assigned.
logicalOrOperatorWithEveryType.ts(123,11): error TS2454: Variable 'a8' is used before being assigned.


==== logicalOrOperatorWithEveryType.ts (130 errors) ====
    // The || operator permits the operands to be of any type.
    // If the || expression is not contextually typed, the right operand is contextually typed
    // by the type of the left operand and the result is of the best common type of the two
    // operand types.
    
    enum E { a, b, c }
    
    var a1: any;
    var a2: boolean;
    var a3: number
    var a4: string;
    var a5: void;
    var a6: E;
    var a7: {a: string};
    var a8: string[];
    
    var ra1 = a1 || a1;         // any       || any is any
    var ra2 = a2 || a1;         // boolean   || any is any
              ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
    var ra3 = a3 || a1;         // number    || any is any
              ~~
!!! error TS2454: Variable 'a3' is used before being assigned.
    var ra4 = a4 || a1;         // string    || any is any
              ~~
!!! error TS2454: Variable 'a4' is used before being assigned.
    var ra5 = a5 || a1;         // void      || any is any
              ~~
!!! error TS1345: An expression of type 'void' cannot be tested for truthiness.
    var ra6 = a6 || a1;         // enum      || any is any
              ~~
!!! error TS2454: Variable 'a6' is used before being assigned.
    var ra7 = a7 || a1;         // object    || any is any
              ~~
!!! error TS2454: Variable 'a7' is used before being assigned.
    var ra8 = a8 || a1;         // array     || any is any
              ~~
!!! error TS2454: Variable 'a8' is used before being assigned.
    var ra9 = null || a1;       // null      || any is any
    var ra10 = undefined || a1; // undefined || any is any
    
    var rb1 = a1 || a2;         // any       || boolean is any
                    ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
    var rb2 = a2 || a2;         // boolean   || boolean is boolean
              ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
    var rb3 = a3 || a2;         // number    || boolean is number | boolean
              ~~
!!! error TS2454: Variable 'a3' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
    var rb4 = a4 || a2;         // string    || boolean is string | boolean
              ~~
!!! error TS2454: Variable 'a4' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
    var rb5 = a5 || a2;         // void      || boolean is void | boolean
              ~~
!!! error TS1345: An expression of type 'void' cannot be tested for truthiness.
                    ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
    var rb6 = a6 || a2;         // enum      || boolean is E | boolean
              ~~
!!! error TS2454: Variable 'a6' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
    var rb7 = a7 || a2;         // object    || boolean is object | boolean
              ~~
!!! error TS2454: Variable 'a7' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
    var rb8 = a8 || a2;         // array     || boolean is array | boolean
              ~~
!!! error TS2454: Variable 'a8' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
    var rb9 = null || a2;       // null      || boolean is boolean
                      ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
    var rb10= undefined || a2;  // undefined || boolean is boolean
                           ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
    
    var rc1 = a1 || a3;         // any       || number is any
                    ~~
!!! error TS2454: Variable 'a3' is used before being assigned.
    var rc2 = a2 || a3;         // boolean   || number is boolean | number
              ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'a3' is used before being assigned.
    var rc3 = a3 || a3;         // number    || number is number
              ~~
!!! error TS2454: Variable 'a3' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'a3' is used before being assigned.
    var rc4 = a4 || a3;         // string    || number is string | number
              ~~
!!! error TS2454: Variable 'a4' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'a3' is used before being assigned.
    var rc5 = a5 || a3;         // void      || number is void | number
              ~~
!!! error TS1345: An expression of type 'void' cannot be tested for truthiness.
                    ~~
!!! error TS2454: Variable 'a3' is used before being assigned.
    var rc6 = a6 || a3;         // enum      || number is number
              ~~
!!! error TS2454: Variable 'a6' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'a3' is used before being assigned.
    var rc7 = a7 || a3;         // object    || number is object | number
              ~~
!!! error TS2454: Variable 'a7' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'a3' is used before being assigned.
    var rc8 = a8 || a3;         // array     || number is array | number
              ~~
!!! error TS2454: Variable 'a8' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'a3' is used before being assigned.
    var rc9 = null || a3;       // null      || number is number
                      ~~
!!! error TS2454: Variable 'a3' is used before being assigned.
    var rc10 = undefined || a3; // undefined || number is number
                            ~~
!!! error TS2454: Variable 'a3' is used before being assigned.
    
    var rd1 = a1 || a4;         // any       || string is any
                    ~~
!!! error TS2454: Variable 'a4' is used before being assigned.
    var rd2 = a2 || a4;         // boolean   || string is boolean | string
              ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'a4' is used before being assigned.
    var rd3 = a3 || a4;         // number    || string is number | string
              ~~
!!! error TS2454: Variable 'a3' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'a4' is used before being assigned.
    var rd4 = a4 || a4;         // string    || string is string
              ~~
!!! error TS2454: Variable 'a4' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'a4' is used before being assigned.
    var rd5 = a5 || a4;         // void      || string is void | string
              ~~
!!! error TS1345: An expression of type 'void' cannot be tested for truthiness.
                    ~~
!!! error TS2454: Variable 'a4' is used before being assigned.
    var rd6 = a6 || a4;         // enum      || string is enum | string
              ~~
!!! error TS2454: Variable 'a6' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'a4' is used before being assigned.
    var rd7 = a7 || a4;         // object    || string is object | string
              ~~
!!! error TS2454: Variable 'a7' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'a4' is used before being assigned.
    var rd8 = a8 || a4;         // array     || string is array | string
              ~~
!!! error TS2454: Variable 'a8' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'a4' is used before being assigned.
    var rd9 = null || a4;       // null      || string is string
                      ~~
!!! error TS2454: Variable 'a4' is used before being assigned.
    var rd10 = undefined || a4; // undefined || string is string
                            ~~
!!! error TS2454: Variable 'a4' is used before being assigned.
    
    var re1 = a1 || a5;         // any       || void is any
    var re2 = a2 || a5;         // boolean   || void is boolean | void
              ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
    var re3 = a3 || a5;         // number    || void is number | void
              ~~
!!! error TS2454: Variable 'a3' is used before being assigned.
    var re4 = a4 || a5;         // string    || void is string | void
              ~~
!!! error TS2454: Variable 'a4' is used before being assigned.
    var re5 = a5 || a5;         // void      || void is void
              ~~
!!! error TS1345: An expression of type 'void' cannot be tested for truthiness.
    var re6 = a6 || a5;         // enum      || void is enum | void
              ~~
!!! error TS2454: Variable 'a6' is used before being assigned.
    var re7 = a7 || a5;         // object    || void is object | void
              ~~
!!! error TS2454: Variable 'a7' is used before being assigned.
    var re8 = a8 || a5;         // array     || void is array | void
              ~~
!!! error TS2454: Variable 'a8' is used before being assigned.
    var re9 = null || a5;       // null      || void is void
    var re10 = undefined || a5; // undefined || void is void
    
    var rg1 = a1 || a6;         // any       || enum is any
                    ~~
!!! error TS2454: Variable 'a6' is used before being assigned.
    var rg2 = a2 || a6;         // boolean   || enum is boolean | enum
              ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'a6' is used before being assigned.
    var rg3 = a3 || a6;         // number    || enum is number
              ~~
!!! error TS2454: Variable 'a3' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'a6' is used before being assigned.
    var rg4 = a4 || a6;         // string    || enum is string | enum
              ~~
!!! error TS2454: Variable 'a4' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'a6' is used before being assigned.
    var rg5 = a5 || a6;         // void      || enum is void | enum
              ~~
!!! error TS1345: An expression of type 'void' cannot be tested for truthiness.
                    ~~
!!! error TS2454: Variable 'a6' is used before being assigned.
    var rg6 = a6 || a6;         // enum      || enum is E
              ~~
!!! error TS2454: Variable 'a6' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'a6' is used before being assigned.
    var rg7 = a7 || a6;         // object    || enum is object | enum
              ~~
!!! error TS2454: Variable 'a7' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'a6' is used before being assigned.
    var rg8 = a8 || a6;         // array     || enum is array | enum
              ~~
!!! error TS2454: Variable 'a8' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'a6' is used before being assigned.
    var rg9 = null || a6;       // null      || enum is E
                      ~~
!!! error TS2454: Variable 'a6' is used before being assigned.
    var rg10 = undefined || a6; // undefined || enum is E
                            ~~
!!! error TS2454: Variable 'a6' is used before being assigned.
    
    var rh1 = a1 || a7;         // any       || object is any
                    ~~
!!! error TS2454: Variable 'a7' is used before being assigned.
    var rh2 = a2 || a7;         // boolean   || object is boolean | object
              ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'a7' is used before being assigned.
    var rh3 = a3 || a7;         // number    || object is number | object
              ~~
!!! error TS2454: Variable 'a3' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'a7' is used before being assigned.
    var rh4 = a4 || a7;         // string    || object is string | object
              ~~
!!! error TS2454: Variable 'a4' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'a7' is used before being assigned.
    var rh5 = a5 || a7;         // void      || object is void | object
              ~~
!!! error TS1345: An expression of type 'void' cannot be tested for truthiness.
                    ~~
!!! error TS2454: Variable 'a7' is used before being assigned.
    var rh6 = a6 || a7;         // enum      || object is enum | object
              ~~
!!! error TS2454: Variable 'a6' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'a7' is used before being assigned.
    var rh7 = a7 || a7;         // object    || object is object
              ~~
!!! error TS2454: Variable 'a7' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'a7' is used before being assigned.
    var rh8 = a8 || a7;         // array     || object is array | object
              ~~
!!! error TS2454: Variable 'a8' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'a7' is used before being assigned.
    var rh9 = null || a7;       // null      || object is object
                      ~~
!!! error TS2454: Variable 'a7' is used before being assigned.
    var rh10 = undefined || a7; // undefined || object is object
                            ~~
!!! error TS2454: Variable 'a7' is used before being assigned.
    
    var ri1 = a1 || a8;         // any       || array is any
                    ~~
!!! error TS2454: Variable 'a8' is used before being assigned.
    var ri2 = a2 || a8;         // boolean   || array is boolean | array
              ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'a8' is used before being assigned.
    var ri3 = a3 || a8;         // number    || array is number | array
              ~~
!!! error TS2454: Variable 'a3' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'a8' is used before being assigned.
    var ri4 = a4 || a8;         // string    || array is string | array
              ~~
!!! error TS2454: Variable 'a4' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'a8' is used before being assigned.
    var ri5 = a5 || a8;         // void      || array is void | array
              ~~
!!! error TS1345: An expression of type 'void' cannot be tested for truthiness.
                    ~~
!!! error TS2454: Variable 'a8' is used before being assigned.
    var ri6 = a6 || a8;         // enum      || array is enum | array
              ~~
!!! error TS2454: Variable 'a6' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'a8' is used before being assigned.
    var ri7 = a7 || a8;         // object    || array is object | array
              ~~
!!! error TS2454: Variable 'a7' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'a8' is used before being assigned.
    var ri8 = a8 || a8;         // array     || array is array
              ~~
!!! error TS2454: Variable 'a8' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'a8' is used before being assigned.
    var ri9 = null || a8;       // null      || array is array
                      ~~
!!! error TS2454: Variable 'a8' is used before being assigned.
    var ri10 = undefined || a8; // undefined || array is array
                            ~~
!!! error TS2454: Variable 'a8' is used before being assigned.
    
    var rj1 = a1 || null;         // any       || null is any
    var rj2 = a2 || null;         // boolean   || null is boolean
              ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
    var rj3 = a3 || null;         // number    || null is number
              ~~
!!! error TS2454: Variable 'a3' is used before being assigned.
    var rj4 = a4 || null;         // string    || null is string
              ~~
!!! error TS2454: Variable 'a4' is used before being assigned.
    var rj5 = a5 || null;         // void      || null is void
              ~~
!!! error TS1345: An expression of type 'void' cannot be tested for truthiness.
    var rj6 = a6 || null;         // enum      || null is E
              ~~
!!! error TS2454: Variable 'a6' is used before being assigned.
    var rj7 = a7 || null;         // object    || null is object
              ~~
!!! error TS2454: Variable 'a7' is used before being assigned.
    var rj8 = a8 || null;         // array     || null is array
              ~~
!!! error TS2454: Variable 'a8' is used before being assigned.
    var rj9 = null || null;       // null      || null is any
    var rj10 = undefined || null; // undefined || null is any
    
    var rf1 = a1 || undefined;         // any       || undefined is any
    var rf2 = a2 || undefined;         // boolean   || undefined is boolean
              ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
    var rf3 = a3 || undefined;         // number    || undefined is number
              ~~
!!! error TS2454: Variable 'a3' is used before being assigned.
    var rf4 = a4 || undefined;         // string    || undefined is string
              ~~
!!! error TS2454: Variable 'a4' is used before being assigned.
    var rf5 = a5 || undefined;         // void      || undefined is void
              ~~
!!! error TS1345: An expression of type 'void' cannot be tested for truthiness.
    var rf6 = a6 || undefined;         // enum      || undefined is E
              ~~
!!! error TS2454: Variable 'a6' is used before being assigned.
    var rf7 = a7 || undefined;         // object    || undefined is object
              ~~
!!! error TS2454: Variable 'a7' is used before being assigned.
    var rf8 = a8 || undefined;         // array     || undefined is array
              ~~
!!! error TS2454: Variable 'a8' is used before being assigned.
    var rf9 = null || undefined;       // null      || undefined is any
    var rf10 = undefined || undefined; // undefined || undefined is any